attempt 1 of fix animation night on ios

--- a/css/styles.css
+++ b/css/styles.css
@@ -440,6 +440,7 @@ h2 {
     grid-column: span 2;
     overflow: hidden;
     justify-content: space-between;
+    position: relative;
   }
 
   &.stack {
